--- a/test/test.html
+++ b/test/test.html
@@ -1,42 +1,480 @@
+正在为您生成精美网页，预计耗时约1分钟，请稍候片刻。 ```html
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>代码注释与解读</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+      body {
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
+        background-color: #f8f9fa;
+        color: #333;
+        line-height: 1.6;
       }
-      .container {
+      .card {
+        background: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+      .card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+      }
+      .code-block {
+        background-color: #282c34;
+        color: #abb2bf;
+        border-radius: 8px;
+        padding: 16px;
+        font-family: "SF Mono", Menlo, Monaco, Consolas, monospace;
+        overflow-x: auto;
+      }
+      .section-title {
         position: relative;
-        height: 100vh;
-        background-color: blue;
-        z-index: 3;
+        padding-left: 16px;
       }
-      .parent1 {
-        position: relative;
-        height: 100%;
-        background-color: greenyellow;
-        z-index: 2;
-      }
-      .parent2 {
-        width: 100%;
-        height: 100%;
+      .section-title:before {
+        content: "";
         position: absolute;
         left: 0;
         top: 0;
-        background-color: red;
-        z-index: 1;
+        bottom: 0;
+        width: 4px;
+        background: linear-gradient(to bottom, #3b82f6, #8b5cf6);
+        border-radius: 2px;
+      }
+      .cursor {
+        animation: blink 1s step-end infinite;
+      }
+      @keyframes blink {
+        from,
+        to {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0;
+        }
       }
     </style>
   </head>
-  <body>
-    <div class="container">
-      <div class="parent1"></div>
-      <div class="parent2"></div>
+  <body class="max-w-4xl mx-auto px-4 py-8">
+    <div class="mb-12">
+      <h1 class="text-3xl font-bold text-gray-800 mb-2">代码注释与解读</h1>
+      <p class="text-gray-600">Vue.js 实现的图片轮播组件与打字机效果</p>
+    </div>
+
+    <div class="grid gap-8">
+      <!-- 概述部分 -->
+      <div class="card p-6">
+        <h2 class="text-xl font-semibold mb-4 section-title">组件概述</h2>
+        <div class="grid md:grid-cols-2 gap-6">
+          <div>
+            <h3 class="font-medium text-gray-700 mb-2 flex items-center">
+              <i class="fas fa-image text-blue-500 mr-2"></i> 图片过渡效果
+            </h3>
+            <p class="text-gray-600">
+              通过CSS透明度过渡实现平滑的图片切换效果，包含占位图模糊处理和原图加载动画。
+            </p>
+          </div>
+          <div>
+            <h3 class="font-medium text-gray-700 mb-2 flex items-center">
+              <i class="fas fa-keyboard text-purple-500 mr-2"></i> 打字机效果
+            </h3>
+            <p class="text-gray-600">
+              模拟打字机逐字打印效果，支持标题和内容的顺序显示、循环播放和暂停/恢复功能。
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 模板部分 -->
+      <div class="card p-6">
+        <h2 class="text-xl font-semibold mb-4 section-title">模板结构</h2>
+        <div class="code-block mb-4">
+          &lt;template&gt;
+          <div class="ml-4">
+            &lt;div class="carousel-item"&gt;
+            <div class="ml-4">
+              &lt;!-- 占位图（模糊效果） --&gt;<br />
+              &lt;img :src="imgInfo.placeholder" class="placeholderImg"
+              v-if="showPlaceholderImg"/&gt;<br /><br />
+
+              &lt;!-- 原图（带加载过渡效果） --&gt;<br />
+              &lt;img :src="imgInfo.src" class="originalImg" @load="handleMask"
+              :style="originalImgStyle"/&gt;<br /><br />
+
+              &lt;!-- 打字机效果文本区域 --&gt;<br />
+              &lt;div class="text-info"&gt;<br />
+              <div class="ml-4">
+                &lt;p class="desc-title"&gt;<br />
+                <div class="ml-4">
+                  {{ displayedTitle }}&lt;span
+                  v-show="showTitleCursor"&gt;|&lt;/span&gt;<br />
+                </div>
+                &lt;/p&gt;<br />
+                &lt;p class="desc-content"&gt;<br />
+                <div class="ml-4">
+                  {{ displayedContent }}&lt;span
+                  v-show="showContentCursor"&gt;|&lt;/span&gt;<br />
+                </div>
+                &lt;/p&gt;<br />
+              </div>
+              &lt;/div&gt;<br />
+            </div>
+            &lt;/div&gt;<br />
+          </div>
+          &lt;/template&gt;
+        </div>
+        <div class="grid md:grid-cols-2 gap-4 mt-4">
+          <div class="bg-blue-50 p-4 rounded-lg">
+            <h4 class="font-medium text-blue-700 mb-2">关键点解析</h4>
+            <ul class="text-sm text-blue-600 list-disc pl-5 space-y-1">
+              <li>使用<code>v-if</code>控制占位图显示</li>
+              <li>原图加载完成后触发<code>handleMask</code>方法</li>
+              <li>动态绑定原图样式<code>originalImgStyle</code></li>
+              <li>
+                打字机效果通过<code>displayedTitle</code>和<code>displayedContent</code>实现
+              </li>
+            </ul>
+          </div>
+          <div class="bg-purple-50 p-4 rounded-lg">
+            <h4 class="font-medium text-purple-700 mb-2">视觉元素</h4>
+            <ul class="text-sm text-purple-600 list-disc pl-5 space-y-1">
+              <li>占位图模糊效果</li>
+              <li>原图淡入淡出过渡</li>
+              <li>打字光标闪烁动画</li>
+              <li>文本区域阴影增强可读性</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- 数据属性 -->
+      <div class="card p-6">
+        <h2 class="text-xl font-semibold mb-4 section-title">数据属性</h2>
+        <div class="code-block mb-4">
+          data() {
+          <div class="ml-4">
+            return {<br />
+            <div class="ml-4">
+              // 图片蒙版控制<br />
+              showOriginalImg: !this.isActive,// 是否显示原图<br />
+              showPlaceholderImg: this.isActive,// 是否显示占位图<br />
+              duration: 2000,// 图片切换动画时长(ms)<br /><br />
+
+              // 打字效果状态<br />
+              displayedTitle: "",// 当前显示的标题文本<br />
+              displayedContent: "",// 当前显示的内容文本<br />
+              showTitleCursor: false,// 标题光标可见性<br />
+              showContentCursor: false,// 内容光标可见性<br /><br />
+
+              // 计时器控制<br />
+              typingTimer: null,// 打字效果计时器<br />
+              currentPhase: "idle",//
+              当前阶段：idle/typingTitle/typingContent/deleting<br />
+              currentIndex: 0,// 当前打字/删除的字符索引<br />
+              isPaused: false// 是否暂停状态<br />
+            </div>
+            };<br />
+          </div>
+          }
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
+          <div class="bg-blue-50 p-4 rounded-lg">
+            <h4 class="font-medium text-blue-700 mb-2">图片控制</h4>
+            <ul class="text-sm text-blue-600 list-disc pl-5 space-y-1">
+              <li><code>showOriginalImg</code>: 原图显示状态</li>
+              <li><code>showPlaceholderImg</code>: 占位图显示状态</li>
+              <li><code>duration</code>: 动画时长2000ms</li>
+            </ul>
+          </div>
+          <div class="bg-purple-50 p-4 rounded-lg">
+            <h4 class="font-medium text-purple-700 mb-2">打字状态</h4>
+            <ul class="text-sm text-purple-600 list-disc pl-5 space-y-1">
+              <li><code>displayedTitle/Content</code>: 当前显示文本</li>
+              <li><code>showTitle/ContentCursor</code>: 光标可见性</li>
+            </ul>
+          </div>
+          <div class="bg-green-50 p-4 rounded-lg">
+            <h4 class="font-medium text-green-700 mb-2">流程控制</h4>
+            <ul class="text-sm text-green-600 list-disc pl-5 space-y-1">
+              <li><code>typingTimer</code>: 计时器实例</li>
+              <li><code>currentPhase</code>: 当前阶段标识</li>
+              <li><code>currentIndex</code>: 字符索引</li>
+              <li><code>isPaused</code>: 暂停状态</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- 核心方法 -->
+      <div class="card p-6">
+        <h2 class="text-xl font-semibold mb-4 section-title">核心方法</h2>
+
+        <div class="mb-6">
+          <h3 class="font-medium text-gray-700 mb-3 flex items-center">
+            <i class="fas fa-mask text-blue-500 mr-2"></i> handleMask() -
+            图片加载处理
+          </h3>
+          <div class="code-block">
+            handleMask() {
+            <div class="ml-4">
+              if (this.isActive) {<br />
+              <div class="ml-4">
+                // 激活状态：显示原图 → 隐藏占位图 → 开始打字<br />
+                this.showOriginalImg = true;<br />
+                setTimeout(() => {<br />
+                <div class="ml-4">
+                  this.showPlaceholderImg = false;<br />
+                  this.startTyping();<br />
+                </div>
+                }, this.duration);<br />
+              </div>
+              } else {<br />
+              <div class="ml-4">
+                // 非激活状态：隐藏原图 → 显示占位图 → 停止打字<br />
+                this.showOriginalImg = false;<br />
+                this.showPlaceholderImg = true;<br />
+                this.stopTyping();<br />
+              </div>
+              }<br />
+            </div>
+            }
+          </div>
+          <div class="bg-blue-50 p-4 rounded-lg mt-3">
+            <h4 class="font-medium text-blue-700 mb-2">功能说明</h4>
+            <p class="text-sm text-blue-600">
+              控制图片的显示/隐藏逻辑，并在适当时候触发打字效果的开始或停止。
+            </p>
+          </div>
+        </div>
+
+        <div class="mb-6">
+          <h3 class="font-medium text-gray-700 mb-3 flex items-center">
+            <i class="fas fa-keyboard text-purple-500 mr-2"></i>
+            typeNextCharacter() - 打字核心逻辑
+          </h3>
+          <div class="code-block">
+            typeNextCharacter() {
+            <div class="ml-4">
+              if (this.isPaused) return;<br /><br />
+
+              // 根据当前阶段选择速度<br />
+              const speed = this.currentPhase.includes("typing") <br />
+              <div class="ml-4">
+                ? this.config.typingSpeed <br />
+                : this.config.deleteSpeed;<br /><br />
+              </div>
+
+              switch (this.currentPhase) {<br />
+              <div class="ml-4">
+                // 标题打字阶段<br />
+                case "typingTitle":<br />
+                <div class="ml-4">
+                  if (this.currentIndex < this.imgInfo.desc.title.length) {<br />
+                  <div class="ml-4">
+                    // 逐个显示标题字符<br />
+                    this.displayedTitle = this.imgInfo.desc.title.substring(0,
+                    this.currentIndex + 1);<br />
+                    this.showTitleCursor = true;<br />
+                    this.currentIndex++;<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), speed);<br />
+                  </div>
+                  } else {<br />
+                  <div class="ml-4">
+                    // 标题打完，切换到内容打字<br />
+                    this.showTitleCursor = false;<br />
+                    this.currentPhase = "typingContent";<br />
+                    this.currentIndex = 0;<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), speed);<br />
+                  </div>
+                  }<br />
+                  break;<br /><br />
+                </div>
+
+                // 内容打字阶段<br />
+                case "typingContent":<br />
+                <div class="ml-4">
+                  if (this.currentIndex < this.imgInfo.desc.content.length) {<br />
+                  <div class="ml-4">
+                    // 逐个显示内容字符<br />
+                    this.displayedContent =
+                    this.imgInfo.desc.content.substring(0, this.currentIndex +
+                    1);<br />
+                    this.showContentCursor = true;<br />
+                    this.currentIndex++;<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), speed);<br />
+                  </div>
+                  } else if (this.config.loop) {<br />
+                  <div class="ml-4">
+                    // 内容打完，切换到删除阶段<br />
+                    this.currentPhase = "deleting";<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), this.config.restartDelay);<br />
+                  </div>
+                  }<br />
+                  break;<br /><br />
+                </div>
+
+                // 删除阶段<br />
+                case "deleting":<br />
+                <div class="ml-4">
+                  if (this.displayedContent.length > 0) {<br />
+                  <div class="ml-4">
+                    // 逐个删除内容字符<br />
+                    this.displayedContent = this.displayedContent.substring(0,
+                    this.displayedContent.length - 1);<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), speed);<br />
+                  </div>
+                  } else if (this.displayedTitle.length > 0) {<br />
+                  <div class="ml-4">
+                    // 内容删完，删除标题<br />
+                    this.displayedTitle = this.displayedTitle.substring(0,
+                    this.displayedTitle.length - 1);<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), speed);<br />
+                  </div>
+                  } else if (this.config.loop) {<br />
+                  <div class="ml-4">
+                    // 全部删完，重新开始循环<br />
+                    this.currentPhase = "typingTitle";<br />
+                    this.currentIndex = 0;<br />
+                    this.typingTimer = setTimeout(() =>
+                    this.typeNextCharacter(), this.config.restartDelay);<br />
+                  </div>
+                  }<br />
+                  break;<br />
+                </div>
+              </div>
+              }<br />
+            </div>
+            }
+          </div>
+          <div class="bg-purple-50 p-4 rounded-lg mt-3">
+            <h4 class="font-medium text-purple-700 mb-2">流程说明</h4>
+            <ul class="text-sm text-purple-600 list-disc pl-5 space-y-1">
+              <li>通过<code>currentPhase</code>管理打字阶段</li>
+              <li>使用<code>substring</code>方法逐个字符显示/删除</li>
+              <li>递归调用<code>setTimeout</code>实现动画效果</li>
+              <li>支持循环播放配置</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- 动画原理 -->
+      <div class="card p-6">
+        <h2 class="text-xl font-semibold mb-4 section-title">
+          动画效果实现原理
+        </h2>
+        <div class="grid md:grid-cols-2 gap-6">
+          <div>
+            <h3 class="font-medium text-gray-700 mb-3 flex items-center">
+              <i class="fas fa-image text-blue-500 mr-2"></i> 图片过渡效果
+            </h3>
+            <div class="bg-blue-50 p-4 rounded-lg">
+              <ul class="text-sm text-blue-600 list-disc pl-5 space-y-1">
+                <li>
+                  <strong>实现方式</strong>：通过
+                  <code>originalImgStyle</code> 计算属性控制
+                  <code>opacity</code> 的 CSS 过渡
+                </li>
+                <li>
+                  <strong>触发条件</strong>：图片加载完成时触发
+                  <code>handleMask</code>
+                </li>
+                <li>
+                  <strong>效果</strong>：原图淡入，占位图淡出（通过
+                  <code>v-if</code> 控制）
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <h3 class="font-medium text-gray-700 mb-3 flex items-center">
+              <i class="fas fa-keyboard text-purple-500 mr-2"></i> 打字机效果
+            </h3>
+            <div class="bg-purple-50 p-4 rounded-lg">
+              <ul class="text-sm text-purple-600 list-disc pl-5 space-y-1">
+                <li>
+                  <strong>核心机制</strong>：递归调用 <code>setTimeout</code> 的
+                  <code>typeNextCharacter</code> 方法
+                </li>
+                <li>
+                  <strong>三个阶段</strong>：标题打字 → 内容打字 → 反向删除
+                </li>
+                <li>
+                  <strong>速度控制</strong>：通过 <code>typingSpeed</code> 和
+                  <code>deleteSpeed</code> 参数
+                </li>
+                <li>
+                  <strong>光标效果</strong>：通过
+                  <code>v-show</code> 动态显示/隐藏
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 总结 -->
+      <div class="card p-6 bg-gradient-to-br from-blue-50 to-purple-50">
+        <h2 class="text-xl font-semibold mb-4 section-title">技术总结</h2>
+        <div class="grid md:grid-cols-2 gap-6">
+          <div>
+            <h3 class="font-medium text-gray-700 mb-2">实现效果</h3>
+            <ul class="text-gray-600 list-disc pl-5 space-y-1">
+              <li>图片平滑过渡动画</li>
+              <li>逐字打印和删除效果</li>
+              <li>光标闪烁动画</li>
+              <li>暂停/恢复功能</li>
+              <li>循环播放控制</li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="font-medium text-gray-700 mb-2">技术亮点</h3>
+            <ul class="text-gray-600 list-disc pl-5 space-y-1">
+              <li>状态驱动的动画流程</li>
+              <li>递归定时器实现动画效果</li>
+              <li>响应式设计适配不同设备</li>
+              <li>可配置的速度参数</li>
+              <li>优雅的暂停/恢复机制</li>
+            </ul>
+          </div>
+        </div>
+        <div class="mt-6 p-4 bg-white rounded-lg">
+          <p class="text-gray-700 font-medium">
+            相比
+            <code>requestAnimationFrame</code>
+            版本，这个实现更简洁直观，适合大多数需要打字机效果的场景。
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="mt-12 pt-6 border-t border-gray-200 text-center text-sm text-gray-500"
+    >
+      <p>网页由问小白生成，仅供参考</p>
+      <p class="mt-1">最后更新时间为2025-07-18 ，星期五</p>
+      <p class="mt-1">
+        问小白网址：<a
+          href="https://wenxiaobai.com"
+          class="text-blue-500 hover:underline"
+          >wenxiaobai.com</a
+        >
+      </p>
     </div>
   </body>
 </html>
+```
